2007-12-28: <Gustaf.Neumann@wu-wien.ac.at>
    - fixed crash for deleted classes in new code
    - changed name from MixinResetInstanceOrder() to MixinResetOrderForInstances()
    - improving documentation
    - made code more local
    - activate assertion during development
    - changed names
       * MixinResetInstanceOrder() -> MixinResetOrderForInstances()
       * mixinofs -> isObjectMixinOf
       * instmixinofs -> isClassMixinOf
       * getAllInstMixinofs -> getAllClassMixinsOf
       * RemoveFromMixinofs -> removeFromObjectMixinsOf
       * RemoveFromInstmixinsofs -> removeFromClassMixinsOf 

2007-12-28: <Martin.Matuska@wu-wien.ac.at>
    - new function from Martin MixinResetInstanceOrder()
    - better cleanup when classes are deleted

2007-12-13: <Gustaf.Neumann@wu-wien.ac.at>
   * fix alias command for aliasing to tcl procs

2007-11-09: <Gustaf.Neumann@wu-wien.ac.at>
    * added missing file (install.sh from tclconfig)

2007-10-30: <Gustaf.Neumann@wu-wien.ac.at>
    *  change Tcl_ObjSetVar2() to Tcl_SetVar2Ex() to
       address problem in setting variables from C.
       The set variable was not seen in an eval.
    *  extended regression test

2007-10-29: <Gustaf.Neumann@wu-wien.ac.at>
    * return mixins before procs in procsearch
    * added regression test
    * Don't through error when the last argument of 
       "obj info class <...>" or "cl info superclass <....>"
       is a non-existing class, but return false instead. 
       This leaves room for pattern matching.

2007-10-28: <Gustaf.Neumann@wu-wien.ac.at>
    * some code refactoring
    * making new code more robust

2007-10-23: <martin.matuska@wu-wien.ac.at>
    * First version of new info methods "mixinof" and "instmixinof"
       - new class info options: "mixinof" and "instmixinof"
       - on class destroy entry is now removed from mixin 
         and instmixin lists

2007-10-12: <Gustaf.Neumann@wu-wien.ac.at>
    * Release of XOTcl 1.5.6

2007-10-09: <Gustaf.Neumann@wu-wien.ac.at>